--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8">
     <title>Weather App</title>
   </head>
-  <body>
+  <body style="background-color: lightblue";>
 
-    <h1>Weather by City</h1>
+    <h1>Weather using GPS Coordinates</h1>
 
     <form action="/" method="post">
-        <label for="cityInput">Weather by City</label>
-        <input id = "cityInput" type="text" name="cityInput">
+        <label for="latInput">Latitude in Decimal Degrees:</label>
+        <input id = "latInput" type="string" name="latInput" placeholder="enter coordinates here" required>
+    <br><br>
+      <label for="lonInput">Longitude in Decimal Degrees:</label>
+        <input id = "lonInput" type="string" name="lonInput" placeholder="enter coordinates here" required>
         <button type="submit">Go</button>
     </form>
 
   </body>
 </html>
-
